webdriver 를 puppeteer 로 변경

--- a/.swcrc
+++ b/.swcrc
@@ -2,8 +2,12 @@
   "$schema": "https://json.schemastore.org/swcrc",
   "jsc": {
     "parser": {
-      "syntax": "typescript"
+      "syntax": "typescript",
+			"tsx": false
     },
     "target": "es5"
-  }
+  },
+	"module": {
+		"type": "commonjs"
+	}
 }
