--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,23 @@
 {
   "compilerOptions": {
     /* Language and Environment */
-    "target": "ESNext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "strict": true,                                      /* Enable all strict type-checking options. */
-    "preserveConstEnums": true,
-		"noEmit": true,
-		"module": "CommonJS",                                /* Specify what module code is generated. */
-    "moduleResolution": "node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
+    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    /* Modules */
+    "module": "ES2020",                                /* Specify what module code is generated. */
+    "moduleResolution": "Node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
+
+    /* Emit */
+    "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
+
+    /* Interop Constraints */
+    "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-		"isolatedModules": true
-  },
-	"include": ["src/**/*.ts", "index.ts"],
-	"exclude": ["node_modules"]
+
+    /* Type Checking */
+    "strict": true,                                      /* Enable all strict type-checking options. */
+
+    /* Completeness */
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+  }
 }
