--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.613.0",
     "@types/aws-lambda": "^8.10.140",
     "@types/node": "^20.14.9",
-    "aws-sdk": "^2.1655.0",
     "dotenv": "^16.4.5",
     "typescript": "^5.5.2"
   },
